[package]
name = "minesweeper-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
game-oxide-framework = {git = "https://github.com/MetalPizzaCat/GameOxideFramework/", branch = "v0.0.2-ui-rework"}
nalgebra = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.17.0", features = ["specs-derive"] }
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image"]